# WiringPi-Python-OPi

./: .gitignore  .gitmodules  Building.md  CHANGES.txt  MANIFEST.in  README.rst  bindings.i  constants.py  generate-bindings.py  setup.cfg  setup.py  wiringopi.i  wiringopi_wrap.c
_wiringpi2/: README.txt  setup.py
examples/: callback.py  delay.py  ladder-board.py  n5510-mcp23017.py  quick2wire-io.py  softpwm.py  softtone.py  two-mcp23017.py
tests/: piglow.py  test.py
